http-keda/reference-grant.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: ReferenceGrant
metadata:
  name: hakeda
  namespace: keda
spec:
  from:
  - group: gateway.networking.k8s.io
    kind: HTTPRoute
    namespace: lab
  to:
  - group: ""
    kind: Service
    name: keda-add-ons-http-interceptor-proxy
