http-keda/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hakeda
  namespace: lab
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: hakeda
      app.kubernetes.io/instance: hakeda
  template:
    metadata:
      labels:
        app.kubernetes.io/name: hakeda
        app.kubernetes.io/instance: hakeda
    spec:
      containers:
        - name: hakeda
          image: "registry.k8s.io/e2e-test-images/agnhost:2.45"
          imagePullPolicy: Always
          args:
              - netexec
          ports:
            - name: http
              containerPort: 8080
              protocol: TCP
          resources:
            requests:
              memory: "64Mi"
              cpu: "250m"
            limits:
              memory: "128Mi"
              cpu: "500m"
          startupProbe:
            httpGet:
              path: /
              port: 8080
              scheme: HTTP
            initialDelaySeconds: 0
            periodSeconds: 3
            timeoutSeconds: 2
            successThreshold: 1
            failureThreshold: 10
          readinessProbe:
            httpGet:
              path: /
              port: 8080
              scheme: HTTP
            initialDelaySeconds: 0
            periodSeconds: 3
            timeoutSeconds: 2
            successThreshold: 1
            failureThreshold: 10
          livenessProbe:
            tcpSocket:
              port: 8080
            initialDelaySeconds: 30
            periodSeconds: 10
            timeoutSeconds: 3
            successThreshold: 1
            failureThreshold: 3
