http-keda/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: hakeda
  namespace: lab
spec:
  type: ClusterIP
  ports:
    - name: http
      port: 80
      targetPort: http
      protocol: TCP
  selector:
    app.kubernetes.io/name: hakeda
    app.kubernetes.io/instance: hakeda
